<?xml version="1.0"?>
<package format="3">
  <name>follow_the_gap</name>
  <version>0.1.0</version>
  <description>A ROS 2 package implementing a Follow the Gap algorithm for F1TENTH.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
